--- a/index.html
+++ b/index.html
@@ -1,49 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TODO APP</title>
-  <!--Bootstrap CDN Link V4.6.2-->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <!-- Font Awesome 4 CDN -->
-  <script src="https://kit.fontawesome.com/259d0ad731.js" crossorigin="anonymous"></script>
-  <!-- Custom CSS Link -->
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-  <div class="container head-container">
-    <div class="row">
-      <div class="col-sm-6 mx-auto">
-        <h1 class="head-title">TODO APP</h1>
-        <form id="input-form">
-          <div class="form-group">
-            <input type="text" class="form-control" id="text-input" placeholder="Enter Here...">
-            <button class="btn btn-primary" id="add-btn"><i class="fa-solid fa-plus"></i></button>
-          </div>
-        </form>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TODO APP</title>
+    <!--Bootstrap CDN Link V4.6.2-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
+    <!-- Font Awesome 4 CDN -->
+    <script
+      src="https://kit.fontawesome.com/259d0ad731.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Custom CSS Link -->
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <div class="container head-container">
+      <div class="row">
+        <div class="col-sm-6 mx-auto">
+          <h1 class="head-title">TODO APP</h1>
+          <form id="input-form">
+            <div class="form-group">
+              <input
+                type="text"
+                class="form-control"
+                id="text-input"
+                placeholder="Enter Here..."
+              />
+              <button class="btn btn-primary" id="add-btn">
+                <i class="fa-solid fa-plus"></i>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6 mx-auto">
-        <h3>Your List Items</h3>
-        <ul class="list-group list-group-flush" id="list-items">
-          <li class="list-group-item list-content">
-            <span>Sample Text</span>
-            <span>
-              <button id="complete"><i class="fa-solid fa-circle-check"></i></button>
-              <button id="edit"><i class="fa-solid fa-pen-to-square"></i></button>
-              <button id="delete"><i class="fa-solid fa-trash-can"></i></button>
-            </span>
-          </li>
-
-        </ul>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 mx-auto">
+          <h3>Your List Items</h3>
+          <ul class="list-group list-group-flush" id="list-items">
+            <li class="list-group-item list-content">
+              <span>Sample Text</span>
+              <span>
+                <button id="complete">
+                  <i class="fa-solid fa-circle-check"></i>
+                </button>
+                <button id="edit">
+                  <i class="fa-solid fa-pen-to-square"></i>
+                </button>
+                <button id="delete">
+                  <i class="fa-solid fa-trash-can"></i>
+                </button>
+              </span>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
-</body>
+    <!-- Bootstrap JavaScript CDN -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+      integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
