--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <!-- Input Section -->
     <div class="container head-container">
       <div class="row">
         <div class="col-sm-6 mx-auto">
@@ -41,29 +42,45 @@
         </div>
       </div>
     </div>
+    <!-- List Section -->
     <div class="container">
       <div class="row">
         <div class="col-sm-6 mx-auto">
           <h3>Your List Items</h3>
           <ul class="list-group list-group-flush" id="list-items">
-            <li class="list-group-item list-content">
-              <span>Sample Text</span>
+            <!-- <li>
+              Sample
               <span>
-                <button id="complete">
-                  <i class="fa-solid fa-circle-check"></i>
-                </button>
-                <button id="edit">
-                  <i class="fa-solid fa-pen-to-square"></i>
-                </button>
-                <button id="delete">
-                  <i class="fa-solid fa-trash-can"></i>
-                </button>
+              <i class="fa-solid fa-circle-check"></i>
+              <i class="fa-solid fa-pen-to-square"></i>
+              <i class="fa-solid fa-trash-can"></i>
+              </span>
+            </li> -->
+
+            
+            <!-- <li class="list-group-item list-content">
+              <span>Sample Text 1</span>
+              <span>
+                <i class="fa-solid fa-circle-check"></i>
+                <i class="fa-solid fa-pen-to-square"></i>
+                <i class="fa-solid fa-trash-can"></i>
               </span>
             </li>
+
+            <li class="list-group-item list-content">
+              <span>Sample Text 1</span>
+              <span>
+                <i class="fa-solid fa-circle-check"></i>
+                <i class="fa-solid fa-pen-to-square"></i>
+                <i class="fa-solid fa-trash-can"></i>
+              </span>
+            </li> -->
           </ul>
         </div>
       </div>
     </div>
+    <!-- Custom Javascript -->
+    <script src="./script.js"></script>
     <!-- Bootstrap JavaScript CDN -->
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
