--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h3>Your List Items</h3>
           <ul class="list-group list-group-flush" id="list-items">
             <!-- <li>
-              Sample
+              Sample Text
               <span>
               <i class="fa-solid fa-circle-check"></i>
               <i class="fa-solid fa-pen-to-square"></i>
@@ -57,17 +57,7 @@
               </span>
             </li> -->
 
-            
             <!-- <li class="list-group-item list-content">
-              <span>Sample Text 1</span>
-              <span>
-                <i class="fa-solid fa-circle-check"></i>
-                <i class="fa-solid fa-pen-to-square"></i>
-                <i class="fa-solid fa-trash-can"></i>
-              </span>
-            </li>
-
-            <li class="list-group-item list-content">
               <span>Sample Text 1</span>
               <span>
                 <i class="fa-solid fa-circle-check"></i>
